--- a/css/styless.css
+++ b/css/styless.css
@@ -140,11 +140,10 @@ html{
 }
 
 
-
 .header-link{
     padding: 33px 0;
     display: block;
-
+  
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -152,7 +151,18 @@ letter-spacing: 0.02em;
 color: var(--main-text-color);
 
 }
+.current::after{
+    content:'';
+   
+    height: 4px;
+    display: block;
+    background-color: var(--acent-color);
+    background-size: contain;
 
+    border-radius: 2px;
+
+
+}
 
 .header-mail{
 
@@ -389,6 +399,26 @@ line-height: 1.16;
 letter-spacing: 0.03em;
 color: var(--main-text-color);
 
+}
+.product{
+    position: relative;
+}
+.job-text{
+padding: 27px 95px;
+margin: 0 0;
+bottom: 0;
+left: 0;
+width: 100%;
+position: absolute;
+    font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+white-space: nowrap;
+color: var(--secondary-text-color);
+background: rgba(47, 48, 58, 0.8);
 }
 
 .teem-desk-conteiner{
@@ -680,16 +710,42 @@ background-color: var(--acent-color);
 }
 .icon:hover,
 .icon:focus{
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+     0px 4px 4px rgba(0, 0, 0, 0.06), 
+     1px 4px 6px rgba(0, 0, 0, 0.16);
+  
 
 }
-
 
 .project-icon{
     padding: 20px 24px;
     box-sizing: border-box;
     border: 1px solid #EEEEEE;
 }
+.icon-portfolio{
+position: relative;
+}
+.icon-portfolio::before{
+    content: 'Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.';
+    width: 100%;
+    height: 100%;
+    background: rgba(33, 150, 243, 0.9);
+    display: inline-block;
+    padding: 63px 24px;
+    position: absolute;
+    opacity: 0;
+    
+
+font-weight: 400;
+font-size: 18px;
+line-height: 1.56;
+letter-spacing: 0.03em;
+color: var(--secondary-text-color);
+}
+.icon-portfolio:hover::before{
+    opacity: 1;
+}
+
 .icon-text{
 margin-top: 0;
 margin-bottom: 4px;
