--- a/css/styless.css
+++ b/css/styless.css
@@ -310,6 +310,24 @@ cursor: pointer;
     background: #2196F3;
     color:var(--buttons-port-color);
 }
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+}
+.modal{
+    min-width: 528px;
+    min-height: 581px;
+    background-color: var(--background-color);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+}
 /* ---------------------ПЕРЕВАГИ--------------- */
 .conteiner-teem{
     padding-top: 94px;
