--- a/css/styless.css
+++ b/css/styless.css
@@ -151,13 +151,17 @@ letter-spacing: 0.02em;
 color: var(--main-text-color);
 
 }
+.current{
+    position: relative;
+}
 .current::after{
     content:'';
-   
+   position: absolute;
     height: 4px;
     display: block;
     background-color: var(--acent-color);
     background-size: contain;
+    white-space: nowrap;
 
     border-radius: 2px;
 
@@ -310,13 +314,19 @@ cursor: pointer;
     background: #2196F3;
     color:var(--buttons-port-color);
 }
+
 .backdrop{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+   
     
+}
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
 }
 .modal{
     min-width: 528px;
@@ -328,6 +338,7 @@ cursor: pointer;
     transform: translate(-50%, -50%);
     
 }
+
 /* ---------------------ПЕРЕВАГИ--------------- */
 .conteiner-teem{
     padding-top: 94px;
