--- a/css/styless.css
+++ b/css/styless.css
@@ -151,18 +151,19 @@ letter-spacing: 0.02em;
 color: var(--main-text-color);
 
 }
-.current{
-    position: relative;
+.header-link.current{
+   position: relative;
 }
-.current::after{
+.header-link.current::after{
     content:'';
-   position: absolute;
+    position: absolute;
+
+    bottom: 0;
+    width: 100%;
     height: 4px;
     display: block;
+  
     background-color: var(--acent-color);
-    background-size: contain;
-    white-space: nowrap;
-
     border-radius: 2px;
 
 
@@ -193,22 +194,6 @@ letter-spacing: 0.02em;
 color: var(--ouwer-text-color);
 
 }
-/* .header-tel:hover,
-.header-tel:focus{
-     color: var(--acent-color);
-     cursor: pointer;
-    
-}
-.header-mail:hover,
-.header-mail:focus{
-     color: var(--acent-color);
-     cursor: pointer;
-    
-} */
-/* .current{
-    color: var(--acent-color);
-} */
-
 
 .list{
     list-style: none;
@@ -321,6 +306,7 @@ cursor: pointer;
     left: 0;
     width: 100%;
     height: 100%;
+    background: rgba(0, 0, 0, 0.2);
    
     
 }
@@ -337,6 +323,18 @@ cursor: pointer;
     left: 50%;
     transform: translate(-50%, -50%);
     
+}
+.btn-close{
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background: var(--background-color);
+    border-radius: 50%;
+    background-size: 30px 30px;
+    color: var(--logo-color-text);
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8px;
+
 }
 
 /* ---------------------ПЕРЕВАГИ--------------- */
