--- a/css/styless.css
+++ b/css/styless.css
@@ -30,7 +30,8 @@ h2,
 h3,
 h4,
 h5,
-h6{
+h6,
+p{
     margin: 0;
 }
 img{
@@ -419,19 +420,21 @@ color: var(--main-text-color);
     position: relative;
 }
 .job-text{
-padding: 27px 95px;
-margin: 0 0;
+
+height: 70px;
 bottom: 0;
-left: 0;
+display: flex;
+justify-content: center;
+align-items: center;
 width: 100%;
 position: absolute;
     font-weight: 700;
-font-size: 14px;
+
 line-height: 1.14;
 text-align: center;
-letter-spacing: 0.03em;
+
 text-transform: uppercase;
-white-space: nowrap;
+
 color: var(--secondary-text-color);
 background: rgba(47, 48, 58, 0.8);
 }
@@ -712,7 +715,8 @@ background-color: var(--acent-color);
 
   .content-btn-item {
     padding: 6px 22px;
-    height: 38px;
+   
+    cursor: pointer;
 
     font-family: 'Roboto';
     font-style: normal;
@@ -723,16 +727,15 @@ background-color: var(--acent-color);
     color: #212121;
     border-radius: 4px;
     background-color: var(--buttons-port-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    backgrount-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 .content-btn-item:hover,
  .content-btn-item:focus{
   background-color: var(--acent-color);
    color: var(--background-color);
-   cursor: pointer;
    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
    
   }
